Fix scrolling issues on smaller screens; Cleanup / remove dead code.

--- a/demo-src/app/main.less
+++ b/demo-src/app/main.less
@@ -251,6 +251,7 @@ button {
 }
 
 .parsed-formulas {
+  min-height: 50%;
   align-items: flex-start;
 
   .formula-list-container {
@@ -308,8 +309,4 @@ button {
 .is-active-text {
   color: @blue;
   text-decoration: underline;
-}
-
-@media screen and (max-width: 1024px) {
-
 }
